# crewai-product-design-assistant

./: README.md  feasibility_evaluation.md  market_analysis.md  pyproject.toml  requirements.txt  technical_assessment.md
.devcontainer/: devcontainer.json
src/product_design/: crew.py  main.py  streamlit_app.py
src/product_design/config/: agents.yaml  tasks.yaml
